--- a/Views/User/AccountInformation.cshtml
+++ b/Views/User/AccountInformation.cshtml
@@ -1,4 +1,4 @@
-
+@model BookCave.Models.InputModels.ShippingBillingInputModel
 
 <div class="container body-container">
     <!-- Row 1 -->
@@ -229,7 +229,7 @@
 <!-- MODAL Change shipping and billing -->
 <div class="modal fade" id="editShippingBilling" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
-        <form asp-controller="" asp-action="">
+        <form asp-controller="User" asp-action="AccountInformation" method="POST">
             <div class="modal-content">
                 <!-- Modal row 1 -->
                 <div class="row">
@@ -243,26 +243,33 @@
                             <label class="form-check-label" for="checkbox96847">Check if same as shipping address</label>
                         </div>
 
-                        <label for="ShippingFirstName">First Name</label>
-                        <input type="text" id="ShippingFirstName" class="form-control validate" required>
-                    
-                        <label for="ShippingLastName">Last Name</label>
-                        <input type="text" id="ShippingLastName" class="form-control validate" required>
-                    
-                        <label for="ShippingStreetName">Street</label>
-                        <input type="text" id="ShippingStreetName" class="form-control validate" required>
-                    
-                        <label for="ShippingHouseNumber">House Number</label>
-                        <input type="number" id="ShippingHouseNumber" class="form-control validate" required>
-                    
-                        <label for="ShippingCity">City</label>
-                        <input type="text" id="ShippingCity" class="form-control validate" required>
+                        <span class="mr-5 font-weight-light text-danger" asp-validation-for="ShippingFirstName"></span>
+                        <label asp-for="ShippingFirstName">First Name</label>
+                        <input asp-for="ShippingFirstName" type="text" id="ShippingFirstName" class="form-control validate" >
 
-                        <label for="ShippingZipCode">Zip Code</label>
-                        <input type="text" id="ShippingZipCode" class="form-control validate" required>
+                        <span class="mr-5 font-weight-light text-danger" asp-validation-for="ShippingLastName"></span>
+                        <label asp-for="ShippingLastName">Last Name</label>
+                        <input asp-for="ShippingLastName" type="text" id="ShippingLastName" class="form-control validate" required>
 
-                        <label for="ShippingCountry">Country</label>
-                        <input type="text" id="ShippingCountry" class="form-control validate" required>
+                        <span class="mr-5 font-weight-light text-danger" asp-validation-for="ShippingStreetName"></span>
+                        <label asp-for="ShippingStreetName">Street</label>
+                        <input asp-for="ShippingStreetName" type="text" id="ShippingStreetName" class="form-control validate" required>
+                    
+                        <span class="mr-5 font-weight-light text-danger" asp-validation-for="ShippingHouseNumber"></span>
+                        <label asp-for="ShippingHouseNumber">House Number</label>
+                        <input asp-for="ShippingHouseNumber" type="number" id="ShippingHouseNumber" class="form-control validate" required>
+                    
+                        <span class="mr-5 font-weight-light text-danger" asp-validation-for="ShippingCity"></span>
+                        <label asp-for="ShippingCity">City</label>
+                        <input asp-for="ShippingCity" type="text" id="ShippingCity" class="form-control validate" required>
+
+                        <span class="mr-5 font-weight-light text-danger" asp-validation-for="ShippingZipCode"></span>
+                        <label asp-for="ShippingZipCode">Zip Code</label>
+                        <input asp-for="ShippingZipCode" type="text" id="ShippingZipCode" class="form-control validate" required>
+
+                        <span class="mr-5 font-weight-light text-danger" asp-validation-for="ShippingCountry"></span>
+                        <label asp-for="ShippingCountry">Country</label>
+                        <input asp-for="ShippingCountry" type="text" id="ShippingCountry" class="form-control validate" required>
                         
                     </div>
                     <!-- Shipping Information -->
@@ -276,26 +283,33 @@
                             <label class="form-check-label" for="checkbox1">Check if same as shipping address</label>
                         </div>
 
-                            <label for="BillingFirstName">First Name</label>
-                            <input type="text" id="BillingFirstName" class="form-control validate billing-information" required>
+                            <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingFirstName"></span>
+                            <label asp-for="BillingFirstName">First Name</label>
+                            <input asp-for="BillingFirstName" type="text" id="BillingFirstName" class="form-control validate billing-information" required>
                         
-                            <label for="BillingLastName">Last Name</label>
-                            <input type="text" id="BillingLastName" class="form-control validate billing-information" required>
+                            <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingLastName"></span>
+                            <label asp-for="BillingLastName">Last Name</label>
+                            <input asp-for="BillingLastName" type="text" id="BillingLastName" class="form-control validate billing-information" required>
 
-                            <label for="BillingStreetName">Street</label>
-                            <input type="text" id="BillingStreetName" class="form-control validate billing-information" required>
+                            <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingStreetName"></span>
+                            <label asp-for="BillingStreetName">Street</label>
+                            <input asp-for="BillingStreetName" type="text" id="BillingStreetName" class="form-control validate billing-information" required>
 
-                            <label for="BillingHouseNumber">House Number</label>
-                            <input type="number" id="BillingHouseNumber" class="form-control validate billing-information" required>
+                            <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingHouseNumber"></span>
+                            <label asp-for="BillingHouseNumber">House Number</label>
+                            <input asp-for="BillingHouseNumber" type="number" id="BillingHouseNumber" class="form-control validate billing-information" required>
 
-                            <label for="BillingCity">City</label>
-                            <input type="text" id="BillingCity" class="form-control validate billing-information" required>
+                            <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingCity"></span>
+                            <label asp-for="BillingCity">City</label>
+                            <input asp-for="BillingCity" type="text" id="BillingCity" class="form-control validate billing-information" required>
 
-                            <label for="BillingZipCode">Zip Code</label>
-                            <input type="text" id="BillingZipCode" class="form-control validate billing-information" required>
+                            <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingZipCode"></span>
+                            <label asp-for="BillingZipCode">Zip Code</label>
+                            <input asp-for="BillingZipCode" type="text" id="BillingZipCode" class="form-control validate billing-information" required>
 
-                            <label for="BillingCountry">Country</label>
-                            <input type="text" id="BillingCountry" class="form-control validate billing-information" required>
+                            <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingCountry"></span>
+                            <label asp-for="BillingCountry">Country</label>
+                            <input asp-for="BillingCountry" type="text" id="BillingCountry" class="form-control validate billing-information" required>
                         </div>
                     <!-- Billing Information -->
                 </div>
@@ -305,7 +319,7 @@
                 <div class="row d-flex flex-row-reverse">
 
                     <div class="modal-footer d-flex justify-content-center">
-                        <button id="submitShipBill" class="btn btn-default mr-5">Submnit Changes</button>
+                        <button type="submit" id="submitShipBill" class="btn btn-default mr-5">Submnit Changes</button>
                     </div>
 
                     <div class="modal-footer d-flex justify-content-center">
@@ -317,7 +331,6 @@
 
             </div>
         </form>
-    </div>
-        
+    </div>  
 </div>
 <!-- MODAL Change shipping and billing -->
