--- a/Views/User/AccountInformation.cshtml
+++ b/Views/User/AccountInformation.cshtml
@@ -245,7 +245,7 @@
 
                         <span class="mr-5 font-weight-light text-danger" asp-validation-for="ShippingFirstName"></span>
                         <label asp-for="ShippingFirstName">First Name</label>
-                        <input asp-for="ShippingFirstName" type="text" id="ShippingFirstName" class="form-control validate" >
+                        <input asp-for="ShippingFirstName" type="text" id="ShippingFirstName" class="form-control validate" required>
 
                         <span class="mr-5 font-weight-light text-danger" asp-validation-for="ShippingLastName"></span>
                         <label asp-for="ShippingLastName">Last Name</label>
