--- a/Views/Manage/AddEmployee.cshtml
+++ b/Views/Manage/AddEmployee.cshtml
@@ -1,7 +1,7 @@
 @model BookCave.Models.InputModels.EmployeeRegisterInputModel
 
 
-<div class="col-lg-7 col-md-12 offset-lg-2 wow fadeInDown mb-5 mt-5">
+<div class="col-lg-7 col-md-12 offset-lg-2 animated fadeInDown mb-5 mt-5">
     <div class="card card-cascade wider">
       <div class="view gradient-card-header blue-gradient p-3">
         <h4 class="h2 mb-0">Add Employee</h4>
