--- a/Views/Manage/ViewBooks.cshtml
+++ b/Views/Manage/ViewBooks.cshtml
@@ -1,4 +1,4 @@
-<div class="col-lg-10 col-md-12 offset-lg-1 wow fadeIn mb-5">
+<div class="col-lg-10 col-md-12 offset-lg-1 animated fadeInDown mb-5">
     <div class="card card-cascade wider">
         <div class="view gradient-card-header blue-gradient p-3">
             <h4 class="h2 mb-0">Existing Books</h4>
