--- a/Views/Manage/AddGenre.cshtml
+++ b/Views/Manage/AddGenre.cshtml
@@ -1,6 +1,6 @@
 @model BookCave.Models.InputModels.GenreInputModel
 
-<div class="col-lg-7 col-md-12 offset-lg-2 wow fadeInDown mb-5">
+<div class="col-lg-7 col-md-12 offset-lg-2 animated fadeInDown mb-5">
     <div class="card card-cascade wider">
         <div class="view gradient-card-header blue-gradient p-3">
             <h4 class="h2 mb-0">Add book</h4>
