--- a/Views/Manage/Shared/_header.cshtml
+++ b/Views/Manage/Shared/_header.cshtml
@@ -1,11 +1,11 @@
  <!-- SideNav slide-out button -->
-  <a href="#" data-activates="slide-out" class="btn btn-primary p-3 button-collapse mb-0">
+  <a href="#" data-activates="slide-out" class="btn btn-primary p-3 button-collapse mb-0 animated fadeInLeft">
       <i class="fa fa-bars"></i>
   </a>
 
 
   <!-- Sidebar navigation -->
-  <div id="slide-out" class="side-nav fixed sn-bg-2">
+  <div id="slide-out" class="side-nav fixed sn-bg-2 animated fadeInLeft">
       <ul class="custom-scrollbar list-unstyled">
           
           <p class="pl-3 pt-3">Logged in as:</p>
