--- a/Views/User/AccountInformation.cshtml
+++ b/Views/User/AccountInformation.cshtml
@@ -50,7 +50,7 @@
 
                 <!--Table body-->
                 <tbody class="hover-pointer">
-                    <tr data-toggle="modal" data-target="#modalChangePassword">
+                    <tr id="togglePasswordModal">
                         <td>Change Password</td>
                     </tr>
                     <tr id="ViewFavBook">
@@ -138,11 +138,11 @@
         <div class="modal-content" id="favorite-Book">
 
             <div class="row">
-                <div class="col" id="FavoriteBookImg">
+                <div class="col un-center" id="FavoriteBookImg">
                     <img class="img-fluid mt-5 ml-3" id="errorImage" src="~/images/errorImg.png">
                 </div>
 
-                <div class="col justify-content-center text-left" id="FavoriteBookInfo">
+                <div class="col justify-content-center text-left un-center" id="FavoriteBookInfo">
 
                 </div>
             </div>
@@ -191,7 +191,7 @@
 
 <!-- MODAL fail warning-->
 <div class="modal fade left" id="ModalWarning" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-notify modal-warning modal-side modal-bottom-left" role="document">
+    <div class="modal-dialog modal-notify modal-warning modal-dialog-centered" role="document">
         <!--Content-->
         <div class="modal-content">
             <!--Header-->
@@ -209,8 +209,8 @@
                 <div class="row">
 
                     <div class="col-9">
-                        <p>Something went wrong with your request...</p>
-                        <p class="card-text"><strong>Please try again later.</strong></p>
+                        <p>Wrong password</p>
+                        <p class="card-text"><strong>You entered a wrong old password or new and confirm password was not the same</strong></p>
                     </div>
                 </div>
 
@@ -224,7 +224,7 @@
         <!--/.Content-->
     </div>
 </div>
-<!-- MODAL fail warning-->     
+<!-- MODAL fail warning-->
 
 <!-- MODAL Change shipping and billing -->
 <div class="modal fade" id="editShippingBilling" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -254,11 +254,11 @@
                         <span class="mr-5 font-weight-light text-danger" asp-validation-for="ShippingStreetName"></span>
                         <label asp-for="ShippingStreetName">Street</label>
                         <input asp-for="ShippingStreetName" type="text" id="ShippingStreetName" class="form-control validate" required>
-                    
+
                         <span class="mr-5 font-weight-light text-danger" asp-validation-for="ShippingHouseNumber"></span>
                         <label asp-for="ShippingHouseNumber">House Number</label>
                         <input asp-for="ShippingHouseNumber" type="number" id="ShippingHouseNumber" class="form-control validate" required>
-                    
+
                         <span class="mr-5 font-weight-light text-danger" asp-validation-for="ShippingCity"></span>
                         <label asp-for="ShippingCity">City</label>
                         <input asp-for="ShippingCity" type="text" id="ShippingCity" class="form-control validate" required>
@@ -270,47 +270,47 @@
                         <span class="mr-5 font-weight-light text-danger" asp-validation-for="ShippingCountry"></span>
                         <label asp-for="ShippingCountry">Country</label>
                         <input asp-for="ShippingCountry" type="text" id="ShippingCountry" class="form-control validate" required>
-                        
+
                     </div>
                     <!-- Shipping Information -->
 
                     <!-- Billing Information -->
-                    <div class="col mr-3 ml-3"> 
+                    <div class="col mr-3 ml-3">
                         <h3 class="mb-0 mt-3">Billing Information</h3>
-                            
+
                         <div class="form-check mb-0 mt-3">
                             <input type="checkbox" class="form-check-input check-for-bill" id="checkbox1">
                             <label class="form-check-label" for="checkbox1">Check if same as shipping address</label>
                         </div>
 
-                            <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingFirstName"></span>
-                            <label asp-for="BillingFirstName">First Name</label>
-                            <input asp-for="BillingFirstName" type="text" id="BillingFirstName" class="form-control validate billing-information" required>
-                        
-                            <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingLastName"></span>
-                            <label asp-for="BillingLastName">Last Name</label>
-                            <input asp-for="BillingLastName" type="text" id="BillingLastName" class="form-control validate billing-information" required>
+                        <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingFirstName"></span>
+                        <label asp-for="BillingFirstName">First Name</label>
+                        <input asp-for="BillingFirstName" type="text" id="BillingFirstName" class="form-control validate billing-information" required>
 
-                            <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingStreetName"></span>
-                            <label asp-for="BillingStreetName">Street</label>
-                            <input asp-for="BillingStreetName" type="text" id="BillingStreetName" class="form-control validate billing-information" required>
+                        <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingLastName"></span>
+                        <label asp-for="BillingLastName">Last Name</label>
+                        <input asp-for="BillingLastName" type="text" id="BillingLastName" class="form-control validate billing-information" required>
 
-                            <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingHouseNumber"></span>
-                            <label asp-for="BillingHouseNumber">House Number</label>
-                            <input asp-for="BillingHouseNumber" type="number" id="BillingHouseNumber" class="form-control validate billing-information" required>
+                        <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingStreetName"></span>
+                        <label asp-for="BillingStreetName">Street</label>
+                        <input asp-for="BillingStreetName" type="text" id="BillingStreetName" class="form-control validate billing-information" required>
 
-                            <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingCity"></span>
-                            <label asp-for="BillingCity">City</label>
-                            <input asp-for="BillingCity" type="text" id="BillingCity" class="form-control validate billing-information" required>
+                        <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingHouseNumber"></span>
+                        <label asp-for="BillingHouseNumber">House Number</label>
+                        <input asp-for="BillingHouseNumber" type="number" id="BillingHouseNumber" class="form-control validate billing-information" required>
 
-                            <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingZipCode"></span>
-                            <label asp-for="BillingZipCode">Zip Code</label>
-                            <input asp-for="BillingZipCode" type="text" id="BillingZipCode" class="form-control validate billing-information" required>
+                        <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingCity"></span>
+                        <label asp-for="BillingCity">City</label>
+                        <input asp-for="BillingCity" type="text" id="BillingCity" class="form-control validate billing-information" required>
 
-                            <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingCountry"></span>
-                            <label asp-for="BillingCountry">Country</label>
-                            <input asp-for="BillingCountry" type="text" id="BillingCountry" class="form-control validate billing-information" required>
-                        </div>
+                        <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingZipCode"></span>
+                        <label asp-for="BillingZipCode">Zip Code</label>
+                        <input asp-for="BillingZipCode" type="text" id="BillingZipCode" class="form-control validate billing-information" required>
+
+                        <span class="mr-5 font-weight-light text-danger" asp-validation-for="BillingCountry"></span>
+                        <label asp-for="BillingCountry">Country</label>
+                        <input asp-for="BillingCountry" type="text" id="BillingCountry" class="form-control validate billing-information" required>
+                    </div>
                     <!-- Billing Information -->
                 </div>
                 <!-- Modal Row 1 -->
@@ -319,7 +319,7 @@
                 <div class="row d-flex flex-row-reverse">
 
                     <div class="modal-footer d-flex justify-content-center">
-                        <button type="submit" id="submitShipBill" class="btn btn-default mr-5">Submnit Changes</button>
+                        <button type="submit" id="submitShipBill" class="btn btn-default mr-5">Submit Changes</button>
                     </div>
 
                     <div class="modal-footer d-flex justify-content-center">
@@ -331,6 +331,68 @@
 
             </div>
         </form>
-    </div>  
+    </div>
 </div>
 <!-- MODAL Change shipping and billing -->
+
+<!-- Modal processing -->
+<div class="modal fade" id="processingModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header justify-content-center">
+                <h4 class="modal-title" id="exampleModalLabel">Processing...</h4>
+            </div>
+            <div class="modal-body text-center">
+
+                <div class="preloader-wrapper big active">
+                    <div class="spinner-layer spinner-blue">
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                    <div class="spinner-layer spinner-red">
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                    <div class="spinner-layer spinner-yellow">
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                    <div class="spinner-layer spinner-green">
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Modal processing -->
