--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -41,8 +41,9 @@
                         </td>
                         <td><strong><span class="amount">@book.Price</span> $</strong></td>
                         <td>
-                            <button type="button" class="btn btn-sm btn-danger waves-effect waves-light">X</button>
+                            <button type="button" class="btn btn-sm btn-danger waves-effect waves-light removeBtn">X</button>
                         </td>
+                        <td class="cartItem d-none"><p>@book.CartItemId</p></td>
                    </tr>
                     }
                 </tbody>
