--- a/Views/Manage/ViewBooks.cshtml
+++ b/Views/Manage/ViewBooks.cshtml
@@ -30,7 +30,7 @@
 
 <!-- Modal to confirm deletion-->
 <div class="modal fade" id="confirmDelete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-notify modal-danger" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-notify modal-danger" role="document">
         <!--Content-->
         <div class="modal-content">
             <!--Header-->
@@ -62,3 +62,103 @@
     </div>
 </div>
 <!-- End of modal to confirm deletion-->
+
+
+<!-- Modal while waiting for confirmation -->
+<div class="modal fade" id="waitingModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-notify modal-info" role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <p class="heading lead text-center">Waiting for response...</p>
+            </div>
+
+            <div class="text-center m-5 p-5">
+                <div class="preloader-wrapper big active">
+                    <div class="spinner-layer spinner-blue-only">
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
+<!-- End of waiting modal -->
+
+
+<!-- Success delete modal -->
+<div class="modal fade" id="centralModalSuccess" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-notify modal-success" role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <p class="heading lead">Modal Success</p>
+
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true" class="white-text">&times;</span>
+                </button>
+            </div>
+
+            <!--Body-->
+            <div class="modal-body">
+                <div class="text-center">
+                    <i class="fa fa-check fa-4x mb-3 animated rotateIn"></i>
+                    <p>Book has been successfully deleted!</p>
+                </div>
+            </div>
+
+            <div class="modal-footer justify-content-center">
+                <a type="button" class="btn btn-primary">Close!</a>
+            </div>
+
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
+
+
+<!-- Failed to delete modal -->
+<div class="modal fade left" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-notify modal-warning" role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <p class="heading">Error!</p>
+
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true" class="white-text">&times;</span>
+                </button>
+            </div>
+
+            <!--Body-->
+            <div class="modal-body">
+
+                <div class="row">
+                    <div class="text-center">
+                        <p><strong>Something went wrong!</strong></p>
+                        <p>There was an error in the server when attempting to delete this book</p>
+                    </div>
+                </div>
+            </div>
+
+            <!--Footer-->
+            <div class="modal-footer justify-content-center">
+                <a type="button" class="btn btn-primary waves-effect" data-dismiss="modal">Dismiss</a>
+            </div>
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
