addadi Css og js fyrir checkout

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -57,7 +57,10 @@
     {
         <script type="text/javascript" src="~/js/SearchControllerJQ.js"></script>
     }
-
+    else if(controller == "checkout")
+    {
+        <script type="text/javascript" src="~/js/CheckOutControllerJQ.js"></script>
+    }
   }
   
   @RenderSection("Scripts", required: false)
