--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -1,5 +1,7 @@
 @model List<BookCave.Models.ViewModels.BookCartViewModel>
-<div class="container pt-5">
+<div class="container mt-5">
+    <button type="button" class="btn btn-danger btn-rounded waves-effect waves-light float-right mt-5" id="clearAll">Clear Cart</button>
+    <button type="button" class="btn btn-primary btn-rounded waves-effect waves-light float-right mt-5" id="update">Update Cart</button>
     <section class="section my-5">
         <div class="table-responsive">
             <table class="table product-table text-center">
